# pypi-audit

./: .gitignore  README.md  pyproject.toml
src/pypi_audit/: __init__.py  __main__.py  cli.py  models.py  scanner.py
src/pypi_audit/api_clients/: __init__.py  base.py  osv.py  pypi_safety.py
src/pypi_audit/ioc/: __init__.py  detector.py  litellm_2026.py
src/pypi_audit/parsers/: __init__.py  base.py  pipfile.py  pyproject.py  requirements.py
src/pypi_audit/reports/: __init__.py  base.py  terminal.py
tests/: __init__.py  conftest.py  test_reports.py  test_scanner.py
tests/test_api_clients/: __init__.py  test_osv.py  test_pypi_safety.py
tests/test_ioc/: __init__.py  test_detector.py  test_litellm.py
tests/test_parsers/: __init__.py  test_pipfile.py  test_pyproject.py  test_requirements.py
