[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pypi-audit"
version = "0.1.0"
description = "Zero-config Python CLI security tool for auditing package dependencies"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Developer", email = "dev@example.com" }
]
keywords = ["security", "vulnerability", "audit", "pypi", "supply-chain"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "click>=8.0.0",
    "httpx>=0.25.0",
    "rich>=13.0.0",
    "packaging>=23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "types-httpx>=0.1.0",
    "build>=1.0.0",
    "twine>=4.0.0",
]

[project.scripts]
pypi-audit = "pypi_audit.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pypi_audit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
